kubernetes/analytics-server.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-server
  labels:
    app: reactive-analytics-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactive-analytics-server
  template:
    metadata:
      labels:
        app: reactive-analytics-server
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: reactive-analytics-server
          image: ${GOOGLE_GCR_HANDLE}/${GOOGLE_PROJECT_ID}/reactive-analytics-server:${BUILD_VERSION}
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: analytics-server
  labels:
    app: reactive-analytics-server
spec:
  selector:
    app: reactive-analytics-server
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  type: LoadBalancer
