kubernetes/analytics-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  tls:
    - hosts:
        - ${NAMESPACE}.adaptivecluster.com
      secretName: nginx-ingress-tls
  defaultBackend:
    service:
      name: analytics-client
      port:
        number: 3000
  rules:
    - host: ${NAMESPACE}.adaptivecluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: analytics-client
                port:
                  number: 3000

          - path: /graphql
            pathType: Exact
            backend:
              service:
                name: analytics-server
                port:
                  number: 4000

          - path: /.well-known/apollo/server-health
            pathType: Exact
            backend:
              service:
                name: analytics-server
                port:
                  number: 4000
